fix #next-show wrapping

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -258,32 +258,6 @@ nav {
   color: darken(white, 20%);
 }
 
-div.radio-bar {
-  line-height: 1;
-  width:100%;
-  color:white;
-  text-decoration:none;
-  font-size: 25px;
-  text-shadow: #333 1px 1px 1px;
-  padding: 5px 0;
-  .next-show-and-locale {
-    display: flex;
-    margin-right: 25px;
-  }
-  #next-show {
-    margin-right: 10px;
-  }
-  @media only screen and (max-device-width: 480px) {
-    font-size:1.5rem;
-    #next-show {
-      display: none;
-    }
-  }
-
-  &.pink-bg {
-    background:$pink;
-  }
-}
 
 .bleed {
   @include stripe-animation;
