--- a/app/styles/player.scss
+++ b/app/styles/player.scss
@@ -241,3 +241,34 @@ div.radio-bar a:hover {
 audio {
   display: none;
 }
+
+div.radio-bar {
+  line-height: 1;
+  width:100%;
+  color:white;
+  text-decoration:none;
+  font-size: 25px;
+  text-shadow: #333 1px 1px 1px;
+  padding: 5px 0;
+  .next-show-and-locale {
+    display: flex;
+    margin-right: 25px;
+  }
+  #next-show {
+    margin-right: 10px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  @media only screen and (max-device-width: 480px) {
+    font-size:1.5rem;
+    #next-show {
+      display: none;
+    }
+  }
+
+  &.pink-bg {
+    background:$pink;
+  }
+}
+
